--- a/config/local.yml
+++ b/config/local.yml
@@ -1,5 +1,6 @@
 version: '1.0.0'
+saving_path: './data'
 logger:
-  name: 'local'
+  name: 'earth_scope'
   level: 'INFO'
   format: '%(asctime)s - %(name)s - %(levelname)s - %(message)s'
