--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,8 +37,9 @@ jobs:
           pip install -r requirements.txt
 
       # Build python script into a stand-alone exe
-      - uses: jimkring/python-script-to-exe@v0.2.0
+      - uses: Nuitka/Nuitka-Action@main
         with:
+          nuitka-version: main
           script-name: geoscope
           onefile: true
   
