--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,21 @@
+certifi==2019.11.28
+chardet==3.0.4
+cycler==0.10.0
+decorator==4.4.2
+future==0.18.2
+idna==2.9
+kiwisolver==1.1.0
+lxml==4.5.0
+matplotlib==3.2.0
+numpy==1.18.1
 obspy==1.1.1
+pkg-resources==0.0.0
+pyparsing==2.4.6
+python-dateutil==2.8.1
+requests==2.23.0
+scipy==1.4.1
+six==1.14.0
+SQLAlchemy==1.3.15
 urllib3==1.25.8
 PyYAML==6.0.1
 click==8.1.6
-requests==2.31.0
