--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,43 @@
-certifi==2019.11.28
-chardet==3.0.4
-cycler==0.10.0
-decorator==4.4.2
-future==0.18.2
-idna==2.9
-kiwisolver==1.1.0
-lxml==4.5.0
-matplotlib==3.2.0
-numpy==1.18.1
-obspy==1.1.1
-pkg-resources==0.0.0
-pyparsing==2.4.6
-python-dateutil==2.8.1
-requests==2.23.0
-scipy==1.4.1
-six==1.14.0
-SQLAlchemy==1.3.15
-urllib3==1.25.8
-PyYAML==6.0.1
+altgraph==0.17.4
+bottle==0.12.25
+bottle-websocket==0.2.9
+build==1.2.1
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.6
+contourpy==1.2.0
+cycler==0.12.1
+decorator==5.1.1
+Eel==0.16.0
+fonttools==4.50.0
+future==1.0.0
+gevent==24.2.1
+gevent-websocket==0.10.1
+greenlet==3.0.3
+idna==3.6
+kiwisolver==1.4.5
+lxml==5.1.1
+macholib==1.16.3
+matplotlib==3.8.3
+mypy==1.9.0
+mypy-extensions==1.0.0
+Nuitka==2.1.4
+numpy==1.26.4
+obspy==1.4.0
+ordered-set==4.1.0
+packaging==24.0
+pillow==10.2.0
+pyparsing==3.1.2
+pyproject_hooks==1.0.0
+python-dateutil==2.9.0.post0
+PyYAML==6.0.1
+requests==2.31.0
+scipy==1.12.0
+six==1.16.0
+SQLAlchemy==2.0.29
+typing_extensions==4.10.0
+urllib3==2.2.1
+whichcraft==0.6.1
+zope.event==5.0
+zope.interface==6.2
+zstandard==0.22.0
