--- a/etc/main.config.yml
+++ b/etc/main.config.yml
@@ -1,20 +1,6 @@
+redis:
+  host: 'localhost'
+  port: '26379'
+  username: 'default'
+  password: 'password'
 saving_path: './data'
-iris:
-  host: 'rtserve.iris.washington.edu'
-  port: 18000
-  channels:
-    - 'YN/SGBS2'
-    - 'XL/MG04'
-    - 'WY/YGC'
-geofon:
-  host: 'geofon-open.gfz-potsdam.de'
-  port: 18000
-  channels:
-    - 'GE/SFJD'
-    - 'GE/PUL'
-    - 'GE/KBU'
-ipgp:
-  url: 'http://ws.ipgp.fr/fdsnws'
-  channels:
-    - 'G/CCD'
-    - 'PF/CAS'
